--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -11,14 +11,15 @@ html{
 }
 
 header img{
-  margin-left: 200px;
   margin-top: 40px;
 
 }
 header ul{
  float:right;
- margin-right: 200px;
+ margin-right: 240px;
  margin-top: 40px;
+ text-align: center;
+
  
 }
 header ul li a{
@@ -28,24 +29,51 @@ header ul li a{
   color:white;
   font-family: rajdhani;
   cursor: pointer;
+  border-bottom: 1px solid rgb(255, 255, 255);
 }
 header li{
   text-decoration: none;
   list-style-type: none;
   font-weight: bold;
 }
+h1{
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: rajdhani;
+  font-size: 30px;
+}
+p{
+  font-family: Space Grotesk Light;
+  font-size: 18px;
+  letter-spacing: 1x;
+}
+.heros p{
+  font-family: Space Grotesk Light;
+  font-size: 22px;
+  letter-spacing: 1x;
+}
+body{
+  margin-left: 160px;
+}
+.flèche{
+  margin-top: 200px;
+}
+.heroslink{
+  margin-top: 100px;
+}
 
+/* Section 1*/
 .section1{
-  inline-size: 500px;
+  inline-size: 600px;
   text-align: center;
   position: relative;
-  margin-top: 200px;
-  margin-left: 430px;
+  margin-top: 300px;
+  margin-left: 190px;
 }
 
 .section1 p{
   font-family: Space Grotesk Light;
-  font-size: 18px;
+  font-size: 21.5px;
   letter-spacing: 1x;
 }
 .section1 h2{
@@ -58,4 +86,32 @@ header li{
   font-family: Space Grotesk Light;
   font-size: 20px;
   margin: 20px;
+}
+
+/* Section 2*/
+.cinema{
+  margin-top: 50px;
+  inline-size: 1000px;
+  line-height: 2px;
+}
+.bathome{
+  display: inline-block;
+  align-items: end;
+}
+.bat3{
+  margin-left: 35px;
+}
+.bat4{
+  margin-left: 35px;
+}
+.bathome h3, span{
+  text-align: center;
+  font-size: 18px;
+  font-family: Space Grotesk Light;
+ }
+.cinema p{
+  font-family: Space Grotesk Light;
+  line-height: 26px;
+  text-align: center;
+  margin-top: 40px;
 }
